--- a/develop/print.html
+++ b/develop/print.html
@@ -3968,6 +3968,9 @@ log_config: &quot;CONFDIR/SERVERNAME.log.config&quot;
 #   - one for ratelimiting how often a user or IP can attempt to validate a 3PID.
 #   - two for ratelimiting how often invites can be sent in a room or to a
 #     specific user.
+#   - one for ratelimiting 3PID invites (i.e. invites sent to a third-party ID
+#     such as an email address or a phone number) based on the account that's
+#     sending the invite.
 #
 # The defaults are as shown below.
 #
@@ -4017,6 +4020,10 @@ log_config: &quot;CONFDIR/SERVERNAME.log.config&quot;
 #  per_user:
 #    per_second: 0.003
 #    burst_count: 5
+#
+#rc_third_party_invite:
+#  per_second: 0.2
+#  burst_count: 10
 
 # Ratelimiting settings for incoming federation
 #
