deploy: 6b1c265c21c0e923cc21e87c5257176160d9fb45

--- a/develop/admin_api/user_admin_api.html
+++ b/develop/admin_api/user_admin_api.html
@@ -488,7 +488,7 @@ were sent, but hidden from users joining the room afterwards.</p>
 An empty body may be passed for backwards compatibility.</p>
 <p>The following actions are performed when deactivating an user:</p>
 <ul>
-<li>Try to unpind 3PIDs from the identity server</li>
+<li>Try to unbind 3PIDs from the identity server</li>
 <li>Remove all 3PIDs from the homeserver</li>
 <li>Delete all devices and E2EE keys</li>
 <li>Delete all access tokens</li>
