deploy: 02632b3504ad4512c5f5a4f859b3fe326b19c788

--- a/develop/modules/password_auth_provider_callbacks.html
+++ b/develop/modules/password_auth_provider_callbacks.html
@@ -295,7 +295,7 @@ Here's an example featuring all currently supported keys:</p>
         &quot;address&quot;: &quot;33123456789&quot;,
         &quot;validated_at&quot;: 1642701357084,
     },
-    &quot;org.matrix.msc3231.login.registration_token&quot;: &quot;sometoken&quot;,  # User has registered through the flow described in MSC3231
+    &quot;m.login.registration_token&quot;: &quot;sometoken&quot;,  # User has registered through a registration token
 }
 </code></pre>
 <p>The second dictionary contains the parameters provided by the user's client in the request
