deploy: 65ef21b1c7b4297d6a7b2888de4cbfe198ac0324

--- a/develop/admin_api/media_admin_api.html
+++ b/develop/admin_api/media_admin_api.html
@@ -184,6 +184,8 @@
 
                         <h1 id="querying-media"><a class="header" href="#querying-media">Querying media</a></h1>
 <p>These APIs allow extracting media information from the homeserver.</p>
+<p>Details about the format of the <code>media_id</code> and storage of the media in the file system
+are documented under <a href="../media_repository.html">media repository</a>.</p>
 <p>To use it, you will need to authenticate by providing an <code>access_token</code>
 for a server admin: see <a href="../usage/administration/admin_api">Admin API</a>.</p>
 <h2 id="list-all-media-in-a-room"><a class="header" href="#list-all-media-in-a-room">List all media in a room</a></h2>
