deploy: 0640f8ebaa34e10a69ad7481b738ae36fda1c103

--- a/develop/modules/password_auth_provider_callbacks.html
+++ b/develop/modules/password_auth_provider_callbacks.html
@@ -309,6 +309,20 @@ callback that does not return <code>None</code> will be used. If this happens, S
 any of the subsequent implementations of this callback. If every callback return <code>None</code>,
 the username provided by the user is used, if any (otherwise one is automatically
 generated).</p>
+<h2 id="is_3pid_allowed"><a class="header" href="#is_3pid_allowed"><code>is_3pid_allowed</code></a></h2>
+<p><em>First introduced in Synapse v1.53.0</em></p>
+<pre><code class="language-python">async def is_3pid_allowed(self, medium: str, address: str, registration: bool) -&gt; bool
+</code></pre>
+<p>Called when attempting to bind a third-party identifier (i.e. an email address or a phone
+number). The module is given the medium of the third-party identifier (which is <code>email</code> if
+the identifier is an email address, or <code>msisdn</code> if the identifier is a phone number) and
+its address, as well as a boolean indicating whether the attempt to bind is happening as
+part of registering a new user. The module must return a boolean indicating whether the
+identifier can be allowed to be bound to an account on the local homeserver.</p>
+<p>If multiple modules implement this callback, they will be considered in order. If a
+callback returns <code>True</code>, Synapse falls through to the next one. The value of the first
+callback that does not return <code>True</code> will be used. If this happens, Synapse will not call
+any of the subsequent implementations of this callback.</p>
 <h2 id="example"><a class="header" href="#example">Example</a></h2>
 <p>The example module below implements authentication checkers for two different login types: </p>
 <ul>
